# rust-sqlb

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
examples/sqlx-postgres/: cargo.toml
examples/sqlx-postgres/src/: main.rs
examples/tokio-postgres/: cargo.toml
examples/tokio-postgres/src/: main.rs
sqlb-macros/: Cargo.toml
sqlb-macros/src/: derive_fields.rs  lib.rs  utils.rs
src/: core.rs  delete.rs  error.rs  insert.rs  lib.rs  select.rs  sqlx_exec.rs  update.rs  utils.rs  val.rs
tests/: itest_base.rs  test_macro.rs  test_macros.rs  test_rules.rs  test_sb_delete.rs  test_sb_enum.rs  test_sb_insert.rs  test_sb_macro.rs  test_sb_others.rs  test_sb_select.rs  test_sb_tx.rs  test_sb_update.rs  test_sea_query.rs  test_sqlx.rs  utils.rs
tests/utils/: mod.rs
