[package]
name = "sqlb"
version = "0.4.0"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
edition = "2018"
homepage = "https://github.com/jeremychone/rust-sqlb"
repository = "https://github.com/jeremychone/rust-sqlb"
description = "Simple, expressive, and progressive SQL Builder for Rust."
keywords = [
	"sql",
	"sqlbuilder",
	"database",
	"orm",
	"postgres"
]
categories = ["database"]
license = "MIT OR Apache-2.0"

[workspace]
members = [".", "sqlb-macros"]

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "time", "uuid" ] }
sqlb-macros = { version="0.4.0", path = "sqlb-macros" }
async-trait = "0.1"
time = "0.3.20"
uuid = "1.3.1"
chrono = { version = "0.4", optional = true }

[features]
default = []
chrono-support = ["chrono"]

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serial_test = "2"