[package]
name = "sqlb"
version = "0.5.0-alpha.1"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
edition = "2018"
homepage = "https://github.com/jeremychone/rust-sqlb"
repository = "https://github.com/jeremychone/rust-sqlb"
description = "Simple, expressive, and progressive SQL Builder for Rust."
keywords = [
	"sql",
	"sqlbuilder",
	"database",
	"orm",
	"postgres"
]
categories = ["database"]
license = "MIT OR Apache-2.0"

[workspace]
members = [
	".", 
	"sqlb-macros",
	# -- examples (e.g., cargo run -p example-tokio-postgres)
	"examples/tokio-postgres",
	"examples/sqlx-postgres",
]

[dependencies]
sea-query = "0.30"
sqlb-macros = { version="0.5.0-alpha.1", path = "sqlb-macros" }

[features]
default = []

[dev-dependencies]
anyhow = "1"
