[package]
name = "sqlb-macros"
version = "0.1.0"
authors = ["jeremy.chone@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "^1.0"
syn = {version = "^1.0", features = ["full"]}
proc-macro2 = "1.0"

[lib]
proc-macro = true