[package]
name = "sqlb-macros"
version = "0.0.5"
authors = ["jeremy.chone@gmail.com"]
edition = "2018"
homepage = "https://github.com/jeremychone/rust-sqlb"
repository = "https://github.com/jeremychone/rust-sqlb"
description = "Macros for sqlb. Not intended to be used directly."
license = "MIT OR Apache-2.0"

[dependencies]
quote = "^1.0"
syn = {version = "^1.0", features = ["full"]}
proc-macro2 = "1.0"

[lib]
proc-macro = true