[package]
name = "sqlb-macros"
version = "0.4.0"
authors = ["jeremy.chone@gmail.com"]
edition = "2021"
homepage = "https://github.com/jeremychone/rust-sqlb"
repository = "https://github.com/jeremychone/rust-sqlb"
description = "Macros for sqlb. Not intended to be used directly."
license = "MIT OR Apache-2.0"

[dependencies]
quote = "1"
syn = {version = "2", features = ["full", "parsing"]}
proc-macro2 = "1"

[lib]
proc-macro = true